--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "NODE_ENV=production node ./bin/www",
     "test": "NODE_ENV=development PORT=3001 mocha --opts mocha.opts --timeout 30000 --exit",
-    "nodemon": "nodemon ./bin/www"
+    "nodemon": "NODE_ENV=production nodemon ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
